docs/4.22/rest_api/storage_apis/csidriver-storage-k8s-io-v1.md
Description
CSIDriver captures information about a Container Storage Interface (CSI) volume driver deployed on the cluster. Kubernetes attach detach controller uses this object to determine whether attach is required. Kubelet uses this object to determine whether pod information needs to be passed on mount. CSIDriver objects are non-namespaced.

Type
`object`

Required
- `spec`

# Specification

| Property     | Type                                                                                 | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|--------------|--------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `apiVersion` | `string`                                                                             | APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources>                                                                                                                                                                            |
| `kind`       | `string`                                                                             | Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds>                                                                                                                                                                           |
| `metadata`   | [`ObjectMeta`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-ObjectMeta) | Standard object metadata. metadata.Name indicates the name of the CSI driver that this object refers to; it MUST be the same name returned by the CSI GetPluginName() call for that driver. The driver name must be 63 characters or less, beginning and ending with an alphanumeric character (\[a-z0-9A-Z\]) with dashes (-), dots (.), and alphanumerics between. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata> |
| `spec`       | `object`                                                                             | CSIDriverSpec is the specification of a CSIDriver.                                                                                                                                                                                                                                                                                                                                                                                                                             |

## .spec

Description
CSIDriverSpec is the specification of a CSIDriver.

Type
`object`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>attachRequired</code></p></td>
<td style="text-align: left;"><p><code>boolean</code></p></td>
<td style="text-align: left;"><p>attachRequired indicates this CSI volume driver requires an attach operation (because it implements the CSI ControllerPublishVolume() method), and that the Kubernetes attach detach controller should call the attach volume interface which checks the volumeattachment status and waits until the volume is attached before proceeding to mounting. The CSI external-attacher coordinates with CSI volume driver and updates the volumeattachment status when the attach operation is complete. If the value is specified to false, the attach operation will be skipped. Otherwise the attach operation will be called.</p>
<p>This field is immutable.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>fsGroupPolicy</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>fsGroupPolicy defines if the underlying volume supports changing ownership and permission of the volume before being mounted. Refer to the specific FSGroupPolicy values for additional details.</p>
<p>This field was immutable in Kubernetes &lt; 1.29 and now is mutable.</p>
<p>Defaults to ReadWriteOnceWithFSType, which will examine each volume to determine if Kubernetes should modify ownership and permissions of the volume. With the default policy the defined fsGroup will only be applied if a fstype is defined and the volume’s access mode contains ReadWriteOnce.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>nodeAllocatableUpdatePeriodSeconds</code></p></td>
<td style="text-align: left;"><p><code>integer</code></p></td>
<td style="text-align: left;"><p>nodeAllocatableUpdatePeriodSeconds specifies the interval between periodic updates of the CSINode allocatable capacity for this driver. When set, both periodic updates and updates triggered by capacity-related failures are enabled. If not set, no updates occur (neither periodic nor upon detecting capacity-related failures), and the allocatable.count remains static. The minimum allowed value for this field is 10 seconds.</p>
<p>This is a beta feature and requires the MutableCSINodeAllocatableCount feature gate to be enabled.</p>
<p>This field is mutable.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>podInfoOnMount</code></p></td>
<td style="text-align: left;"><p><code>boolean</code></p></td>
<td style="text-align: left;"><p>podInfoOnMount indicates this CSI volume driver requires additional pod information (like podName, podUID, etc.) during mount operations, if set to true. If set to false, pod information will not be passed on mount. Default is false.</p>
<p>The CSI driver specifies podInfoOnMount as part of driver deployment. If true, Kubelet will pass pod information as VolumeContext in the CSI NodePublishVolume() calls. The CSI driver is responsible for parsing and validating the information passed in as VolumeContext.</p>
<p>The following VolumeContext will be passed if podInfoOnMount is set to true. This list might grow, but the prefix will be used. "csi.storage.k8s.io/pod.name": pod.Name "csi.storage.k8s.io/pod.namespace": pod.Namespace "csi.storage.k8s.io/pod.uid": string(pod.UID) "csi.storage.k8s.io/ephemeral": "true" if the volume is an ephemeral inline volume defined by a CSIVolumeSource, otherwise "false"</p>
<p>"csi.storage.k8s.io/ephemeral" is a new feature in Kubernetes 1.16. It is only required for drivers which support both the "Persistent" and "Ephemeral" VolumeLifecycleMode. Other drivers can leave pod info disabled and/or ignore this field. As Kubernetes 1.15 doesn’t support this field, drivers can only support one mode when deployed on such a cluster and the deployment determines which mode that is, for example via a command line parameter of the driver.</p>
<p>This field was immutable in Kubernetes &lt; 1.29 and now is mutable.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>requiresRepublish</code></p></td>
<td style="text-align: left;"><p><code>boolean</code></p></td>
<td style="text-align: left;"><p>requiresRepublish indicates the CSI driver wants <code>NodePublishVolume</code> being periodically called to reflect any possible change in the mounted volume. This field defaults to false.</p>
<p>Note: After a successful initial NodePublishVolume call, subsequent calls to NodePublishVolume should only update the contents of the volume. New mount points will not be seen by a running container.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>seLinuxMount</code></p></td>
<td style="text-align: left;"><p><code>boolean</code></p></td>
<td style="text-align: left;"><p>seLinuxMount specifies if the CSI driver supports "-o context" mount option.</p>
<p>When "true", the CSI driver must ensure that all volumes provided by this CSI driver can be mounted separately with different <code>-o context</code> options. This is typical for storage backends that provide volumes as filesystems on block devices or as independent shared volumes. Kubernetes will call NodeStage / NodePublish with "-o context=xyz" mount option when mounting a ReadWriteOncePod volume used in Pod that has explicitly set SELinux context. In the future, it may be expanded to other volume AccessModes. In any case, Kubernetes will ensure that the volume is mounted only with a single SELinux context.</p>
<p>When "false", Kubernetes won’t pass any special SELinux mount options to the driver. This is typical for volumes that represent subdirectories of a bigger shared filesystem.</p>
<p>Default is "false".</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>serviceAccountTokenInSecrets</code></p></td>
<td style="text-align: left;"><p><code>boolean</code></p></td>
<td style="text-align: left;"><p>serviceAccountTokenInSecrets is an opt-in for CSI drivers to indicate that service account tokens should be passed via the Secrets field in NodePublishVolumeRequest instead of the VolumeContext field. The CSI specification provides a dedicated Secrets field for sensitive information like tokens, which is the appropriate mechanism for handling credentials. This addresses security concerns where sensitive tokens were being logged as part of volume context.</p>
<p>When "true", kubelet will pass the tokens only in the Secrets field with the key "csi.storage.k8s.io/serviceAccount.tokens". The CSI driver must be updated to read tokens from the Secrets field instead of VolumeContext.</p>
<p>When "false" or not set, kubelet will pass the tokens in VolumeContext with the key "csi.storage.k8s.io/serviceAccount.tokens" (existing behavior). This maintains backward compatibility with existing CSI drivers.</p>
<p>This field can only be set when TokenRequests is configured. The API server will reject CSIDriver specs that set this field without TokenRequests.</p>
<p>Default behavior if unset is to pass tokens in the VolumeContext field.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>storageCapacity</code></p></td>
<td style="text-align: left;"><p><code>boolean</code></p></td>
<td style="text-align: left;"><p>storageCapacity indicates that the CSI volume driver wants pod scheduling to consider the storage capacity that the driver deployment will report by creating CSIStorageCapacity objects with capacity information, if set to true.</p>
<p>The check can be enabled immediately when deploying a driver. In that case, provisioning new volumes with late binding will pause until the driver deployment has published some suitable CSIStorageCapacity object.</p>
<p>Alternatively, the driver can be deployed with the field unset or false and it can be flipped later when storage capacity information has been published.</p>
<p>This field was immutable in Kubernetes ⇐ 1.22 and now is mutable.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>tokenRequests</code></p></td>
<td style="text-align: left;"><p><code>array</code></p></td>
<td style="text-align: left;"><p>tokenRequests indicates the CSI driver needs pods' service account tokens it is mounting volume for to do necessary authentication. Kubelet will pass the tokens in VolumeContext in the CSI NodePublishVolume calls. The CSI driver should parse and validate the following VolumeContext: "csi.storage.k8s.io/serviceAccount.tokens": { "&lt;audience&gt;": { "token": &lt;token&gt;, "expirationTimestamp": &lt;expiration timestamp in RFC3339&gt;, }, …​ }</p>
<p>Note: Audience in each TokenRequest should be different and at most one token is empty string. To receive a new token after expiry, RequiresRepublish can be used to trigger NodePublishVolume periodically.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>tokenRequests[]</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>TokenRequest contains parameters of a service account token.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>volumeLifecycleModes</code></p></td>
<td style="text-align: left;"><p><code>array (string)</code></p></td>
<td style="text-align: left;"><p>volumeLifecycleModes defines what kind of volumes this CSI volume driver supports. The default if the list is empty is "Persistent", which is the usage defined by the CSI specification and implemented in Kubernetes via the usual PV/PVC mechanism.</p>
<p>The other mode is "Ephemeral". In this mode, volumes are defined inline inside the pod spec with CSIVolumeSource and their lifecycle is tied to the lifecycle of that pod. A driver has to be aware of this because it is only going to get a NodePublishVolume call for such a volume.</p>
<p>For more information about implementing this mode, see <a href="https://kubernetes-csi.github.io/docs/ephemeral-local-volumes.html">https://kubernetes-csi.github.io/docs/ephemeral-local-volumes.html</a> A driver can support one or more of these modes and more modes may be added in the future.</p>
<p>This field is beta. This field is immutable.</p></td>
</tr>
</tbody>
</table>

## .spec.tokenRequests

Description
tokenRequests indicates the CSI driver needs pods' service account tokens it is mounting volume for to do necessary authentication. Kubelet will pass the tokens in VolumeContext in the CSI NodePublishVolume calls. The CSI driver should parse and validate the following VolumeContext: "csi.storage.k8s.io/serviceAccount.tokens": { "\<audience\>": { "token": \<token\>, "expirationTimestamp": \<expiration timestamp in RFC3339\>, }, …​ }

Note: Audience in each TokenRequest should be different and at most one token is empty string. To receive a new token after expiry, RequiresRepublish can be used to trigger NodePublishVolume periodically.

Type
`array`

## .spec.tokenRequests\[\]

Description
TokenRequest contains parameters of a service account token.

Type
`object`

Required
- `audience`

| Property            | Type      | Description                                                                                                                                                   |
|---------------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `audience`          | `string`  | audience is the intended audience of the token in "TokenRequestSpec". It will default to the audiences of kube apiserver.                                     |
| `expirationSeconds` | `integer` | expirationSeconds is the duration of validity of the token in "TokenRequestSpec". It has the same default value of "ExpirationSeconds" in "TokenRequestSpec". |

# API endpoints

The following API endpoints are available:

- `/apis/storage.k8s.io/v1/csidrivers`

  - `DELETE`: delete collection of CSIDriver

  - `GET`: list or watch objects of kind CSIDriver

  - `POST`: create a CSIDriver

- `/apis/storage.k8s.io/v1/watch/csidrivers`

  - `GET`: watch individual changes to a list of CSIDriver. deprecated: use the 'watch' parameter with a list operation instead.

- `/apis/storage.k8s.io/v1/csidrivers/{name}`

  - `DELETE`: delete a CSIDriver

  - `GET`: read the specified CSIDriver

  - `PATCH`: partially update the specified CSIDriver

  - `PUT`: replace the specified CSIDriver

- `/apis/storage.k8s.io/v1/watch/csidrivers/{name}`

  - `GET`: watch changes to an object of kind CSIDriver. deprecated: use the 'watch' parameter with a list operation instead, filtered to a single item with the 'fieldSelector' parameter.

## /apis/storage.k8s.io/v1/csidrivers

HTTP method
`DELETE`

Description
delete collection of CSIDriver

| Parameter | Type     | Description                                                                                                                                                                                                                                              |
|-----------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`  | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed |

Query parameters

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
list or watch objects of kind CSIDriver

| HTTP code          | Reponse body                                                                       |
|--------------------|------------------------------------------------------------------------------------|
| 200 - OK           | [`CSIDriverList`](../objects/index.xml#io-k8s-api-storage-v1-CSIDriverList) schema |
| 401 - Unauthorized | Empty                                                                              |

HTTP responses

HTTP method
`POST`

Description
create a CSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                              | Description |
|-----------|---------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                      |
|--------------------|---------------------------------------------------------------------------------------------------|
| 200 - OK           | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 201 - Created      | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 202 - Accepted     | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                             |

HTTP responses

## /apis/storage.k8s.io/v1/watch/csidrivers

HTTP method
`GET`

Description
watch individual changes to a list of CSIDriver. deprecated: use the 'watch' parameter with a list operation instead.

| HTTP code          | Reponse body                                                                                |
|--------------------|---------------------------------------------------------------------------------------------|
| 200 - OK           | [`WatchEvent`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-WatchEvent) schema |
| 401 - Unauthorized | Empty                                                                                       |

HTTP responses

## /apis/storage.k8s.io/v1/csidrivers/{name}

| Parameter | Type     | Description           |
|-----------|----------|-----------------------|
| `name`    | `string` | name of the CSIDriver |

Global path parameters

HTTP method
`DELETE`

Description
delete a CSIDriver

| Parameter | Type     | Description                                                                                                                                                                                                                                              |
|-----------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`  | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed |

Query parameters

| HTTP code          | Reponse body                                                                                      |
|--------------------|---------------------------------------------------------------------------------------------------|
| 200 - OK           | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 202 - Accepted     | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                             |

HTTP responses

HTTP method
`GET`

Description
read the specified CSIDriver

| HTTP code          | Reponse body                                                                                      |
|--------------------|---------------------------------------------------------------------------------------------------|
| 200 - OK           | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                             |

HTTP responses

HTTP method
`PATCH`

Description
partially update the specified CSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                                      |
|--------------------|---------------------------------------------------------------------------------------------------|
| 200 - OK           | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 201 - Created      | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                             |

HTTP responses

HTTP method
`PUT`

Description
replace the specified CSIDriver

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                              | Description |
|-----------|---------------------------------------------------------------------------------------------------|-------------|
| `body`    | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                                      |
|--------------------|---------------------------------------------------------------------------------------------------|
| 200 - OK           | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 201 - Created      | [`CSIDriver`](../storage_apis/csidriver-storage-k8s-io-v1.xml#csidriver-storage-k8s-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                             |

HTTP responses

## /apis/storage.k8s.io/v1/watch/csidrivers/{name}

| Parameter | Type     | Description           |
|-----------|----------|-----------------------|
| `name`    | `string` | name of the CSIDriver |

Global path parameters

HTTP method
`GET`

Description
watch changes to an object of kind CSIDriver. deprecated: use the 'watch' parameter with a list operation instead, filtered to a single item with the 'fieldSelector' parameter.

| HTTP code          | Reponse body                                                                                |
|--------------------|---------------------------------------------------------------------------------------------|
| 200 - OK           | [`WatchEvent`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-WatchEvent) schema |
| 401 - Unauthorized | Empty                                                                                       |

HTTP responses
